syntax = "proto3";

package article;

option go_package = "service-2-article/proto";

import "user_service.proto";



message Article {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 user_id = 4; //Foregin key
  string created_at = 5;
  string updated_at = 6;
}